kubernetes-networks/canary-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo-production
  labels:
    name: echo-production
---
apiVersion: v1
kind: Namespace
metadata:
  name: echo-canary
  labels:
    name: echo-canary
