kubernetes-networks/core-dns-svc-lb-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-dns-svc-lb-tcp
  namespace: kube-system
  annotations:
    metallb.universe.tf/allow-shared-ip: dns
spec:
#  loadBalancerIP: 172.17.255.3
  selector:
    k8s-app: kube-dns
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 53
      targetPort: 53
