kubernetes-networks/kubernetes-dashboard-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-svc
  namespace: kube-system
spec:
  selector:
    app: kubernetes-dashboard
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 443
      targetPort: 9090
